--- a/src/index.css
+++ b/src/index.css
@@ -47,12 +47,135 @@ body{
 
 .image{
   border-radius: 8px;
+  cursor: pointer;
 }
 
+.modal-hidden{
+  overflow: hidden;
+}
+
+.background-before-loading{
+  position:fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right:0;
+  background-color: rgba(155,155,155,0.7);
+}
+
+.background-modal{
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right:0;
+  background-color: rgba(155,155,155,0.7);
+}
+
+.inside-modal{
+  position:fixed;
+  padding:30px;
+  display:flex;
+  align-items: center;
+  gap:15px;
+  top:20%;
+  bottom: 20%;
+  left: 20%;
+  right: 20%;
+  background-color:#202B38 ;
+  color: white;
+  font-size: 25px;
+}
+
+.title-modal{
+  margin-top:50px;
+  margin-right:30px;
+  color: white;
+}
+
+.description span{
+  color: cyan;
+}
+
+.button-modal{
+  background-color: #202B38;
+  border: none;
+  font-size: 40px;
+  color: white;
+  width:100%;
+  text-align: right;
+}
+
+@media(max-width: 1565px){
+  .inside-modal{
+    top: 15%;
+    bottom: 15%;
+    left: 15%;
+    right:15%;
+  }
+}
+
+@media(max-width: 1035px){
+  .inside-modal{
+    top: 10%;
+    bottom: 10%;
+    left: 10%;
+    right:10%;
+  }
+  .input{
+    width:80%;
+  }
+}
+
+@media(max-width: 900px){
+  .inside-modal{
+    flex-direction:  column;
+    font-size: 20px;
+  }
+
+  .image-modal{
+    height: 300px;
+  }
+  .title-modal{
+    margin: 0;
+  }
+}
+
+@media (max-width: 780px){
+  .inside-modal{
+    top:5%;
+    bottom: 5%;
+    left: 2%;
+    right:2%;
+  }
+}
+
+@media (max-width: 600px){
+  .inside-modal{
+    top:5%;
+    bottom: 5%;
+    left: 2%;
+    right:2%;
+  }
+
+  .input {
+    width:100%;
+  }
+}
+
+@media (max-width: 453px){
+  .inside-modal{
+    overflow-y: scroll;
+  }
+  .container{
+    width:95%;
+  }
+}
 .lds-roller {
   display: inline-block;
   position: relative;
   margin:0 auto;
+  align-self:center;
   width: 80px;
   height: 80px;
 }
